@@ -535,6 +535,15 @@ on the type of the graphics hardware, either of the values might give the best
 performance. Note that with pixel format set to bgr16 or rgb16, emulation of
 colors is slightly less accurate.
 .TP
+\fB-pbo
+Use Pixel Buffer Objects when OpenGL acceleration is enabled (the default).
+PBOs are available on newer graphics hardware and when used, substantially
+improve emulator's performance. However in rare cases (some Intel on-board
+chips) using PBOs may actually descrease perfromance.
+.TP
+\fB-no-pbo
+Don't use Pixel Buffer Objects when OpenGL acceleration is used.
+.TP
 \fB-bilinear-filter
 Enable bilinear filtering of the screen in OpenGL modes.
 .TP
